<resources>
    <string name="app_name">GeoReminder</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="done">Done</string>
    <string name="current">Current</string>
    <string name="you_have_2_task_for_today">You have 2 task for today</string>
    <string name="good_afternoon_user">Good Afternoon, User</string>
    <string name="add">add</string>
    <string name="remind_text">Remind text</string>
    <string name="description">Description</string>
    <string name="list_of_location">List of locations</string>
    <string name="select_location">Select location</string>
    <string name="choose_variant">Choose variant</string>
    <string name="developer_is_debil">Something wrong with developer(just stupid)</string>
    <string name="empty">Empty</string>
</resources>
