<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#FFFFFFFF"
    >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/remind_text"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_name"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_description">

            <Button
                android:id="@+id/btn_location"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/location"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/time"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_location"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_button"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>